x/xx/2011 - MythBox 1.0.5
-----------------------------
  New
    - A thumbnail for which there is no associated recording is
      automatically deleted

6/11/2011 - MythBox 1.0.4
-----------------------------
  New

    - Issue 168 - User jobs, comm flagging, and transcoding can
      be triggered via the Advanced button on the Recording
      Details window 
    - Jobs and Tuners table on the Home window update automatically
      based on events from the master backend
    - Coverflow recordings can be deleted by clicking the down button
    - New artwork is checked for once a month if no artwork was 
      previously available
    - |<< and >>| buttons are mapped to go to the top/bottom of a list   
    - Upgraded to mysql-connector-python 0.3.2
    - Various caching optimizations
    - Added blurb on the two different Commercial Skipping modes to
      the FAQ as Q7.
    
  Fixed
    - Issue 170 - Programs no longer sorted by title after a program is deleted

5/9/2011 - MythBox 1.0.3
-----------------------------
  New
    - Recordings Window
        - Issue 128 - Recordings grouped by title
        - Wallpapers from TVDB/TMDB added as backdrop
    
    - Recording Schedules Window 
        - Added # Recorded column
        - Sortable by Title, # Recorded, or Priority
    
    - Recording Schedule Dialog
        - Issue 155 - Added User Jobs
        - Added Recording Profile 
        
    - TV Guide Window
        - Selecting a program that is currently playing starts Live TV
        - Selecting a program with a schedule edits the schedule
        - Selecting a program with no schedule creates a schedule
        - Added banners from TVDB to the program details (bottom)
 
    - Watch TV Window
        - Added banners from TVDB to each channel        

    - Upcoming Recordings Window    
        - Launches faster (smart caching)
    
    - Settings Window
        - Issue 111 - Stream recordings directly from the backend by 